# aoc18c

./: CMakeLists.txt  format.sh
1/: aoc18_1_1.c  aoc18_1_2.c
2/: aoc18_2_1.c  aoc18_2_2.c
3/: aoc18_3_1and2.c
cmake/: format-checks.cmake
